<resources>
    <string name="app_name" translatable="false">Weather7</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Местоположение</string>
    <string name="title_cities">Города</string>
    <string name="title_notifications">Уведомления</string>

    <string name="city_name_hint">Название города</string>

    <string name="wind_speed">Скорость ветра: </string>
    <string name="pressure">Давление: </string>
    <string name="humidity">Влажность: </string>
    <string name="clouds">Облачность: </string>
    <string name="temp_day">Температура днём</string>
    <string name="temp_night">Температура ночью </string>

    <integer name="com_vk_sdk_AppId">7778055</integer>

    <string name="title_activity_maps">Карта с дождевым фильтром</string>

    <string-array name="repeatArray">
        <item>"Ежедневно"</item>
        <item>"Без повторений"</item>
        <item>"В определённый день"</item>
    </string-array>
    <string name="cityName">Город: </string>
    <string name="repeatMode">Повторение: </string>
    <string name="selectedTime">Время: </string>
    <string name="selectedDate">Дата: </string>

    <string name="scheduleNotification">Запланировать уведомление</string>
    <string name="clearNotifications">Очистить запланированные уведомления</string>
    <string name="text_rain_map">Карта осадков</string>
    <string name="text_open_city_on_map">На карту</string>
    <string name="refresh_location">Обновить местоположение</string>
</resources>