<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_location">

    <fragment
        android:id="@+id/navigation_location"
        android:name="com.example.weather7.view.FragmentLocation"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_location" />

    <fragment
        android:id="@+id/navigation_cities"
        android:name="com.example.weather7.view.cities.FragmentCities"
        android:label="@string/title_cities"
        tools:layout="@layout/fragment_cities" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.weather7.view.notifications.FragmentNotifications"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>