<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="android.view.View" />
        <variable
            name="ViewModel"
            type="com.example.weather7.viewmodel.notifications.NotificationsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:alpha="0.9"
        android:orientation="vertical"
        android:weightSum="30"
        tools:context=".view.notifications.FragmentNotifications">

        <LinearLayout
            android:id="@+id/containerCity"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:layout_weight="3"
            android:alpha="0.5"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_weight="2"
                android:text="@string/cityName"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/cityName"
                style="@android:style/Widget.DeviceDefault.Light.Spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right|top"
                android:layout_weight="3"
                android:background="@color/blu_gray_600"
                app:selectedValue="@={ViewModel.selectedCity}" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerRepeat"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:layout_weight="3"
            android:alpha="0.5"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_weight="2"
                android:text="@string/repeatMode"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/repaetMode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right|top"
                android:layout_weight="3"
                android:background="@color/blu_gray_600"
                android:entries="@array/repeatArray"
                app:selectedValue="@={ViewModel.selectedRepeatMode}" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerTime"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:layout_weight="3"
            android:alpha="0.5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/selectedTime"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/selectedTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#009688"
                android:ems="10"
                android:focusable="auto"
                android:focusableInTouchMode="false"
                android:inputType="none"
                android:onClick="@{(view)->ViewModel.onPickerClick(view)}"
                android:text="@{ViewModel.selectedTimeContent}" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerDate"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:layout_weight="3"
            android:alpha="0.5"
            android:orientation="horizontal"
            android:visibility="@{!ViewModel.selectedRepeatMode.equals(ViewModel.REPEAT_MODE_CONCRETE_DATE)? View.GONE:View.VISIBLE}"
            android:weightSum="2">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/selectedDate"
                android:textColor="@color/blu_gray_50"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/selectedDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#009688"
                android:ems="10"
                android:focusable="auto"
                android:focusableInTouchMode="false"
                android:inputType="none"
                android:onClick="@{(view)->ViewModel.onPickerClick(view)}"
                android:text="@{ViewModel.selectedDateContent}" />
        </LinearLayout>

        <Button
            android:id="@+id/scheduleNotification"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:onClick="@{()->ViewModel.onScheduleNotification()}"
            android:text="@string/scheduleNotification" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/notificationsRecycleView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15" />

    </LinearLayout>
</layout>